--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="https://showchat.tk/">
+    <a class="navbar-brand" href="https://showchat.ml/">
       <img src="{{ site.urlimg }}showchat-logo.png" alt="ShowChat"></a>
    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="https://showchat.tk/">Acasa
+          <a class="nav-link" href="https://showchat.ml/">Acasa
             <span class="sr-only">(current)</span>
           </a>
         </li>
