--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -6,6 +6,9 @@
     <div class="container">
       {{ content }}
     </div>
+    
+     {% include comments.html %}
+    
     {% include footer.html %}
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
