--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,4 +18,7 @@
 <meta http-equiv="expires" content="Thu, 01 Dec 1994 16:00:00 GMT" />
  <!--  pwa builder -->
 <link rel='manifest' href='/manifest.json'>
+<!-- Simple Markdown Editor -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 </head>
