--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,5 +9,6 @@
     {% include footer.html %}
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </body>
 </html>
