--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -12,5 +12,6 @@
     {% include footer.html %}
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </body>
 </html>
